<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="action_highscores">Highscores</string>
    <string name="explanation">Guess the word or a letter.</string>
    <string name="wrong_letter">Too bad!</string>
    <string name="wrong_input">Incorrect input: guess a word or letter.</string>
    <string name="wrong_word">That is not the word!</string>
    <string name="keyboard_letters">qwertyuiop/asdfghjkl/zxcvbnm</string>
    <string name="no_guesses">Number of guesses</string>
    <string name="word_length">Word length</string>
    <string name="new_puzzle">New Puzzle</string>
    <string name="word_length_key">WORD_LENGTH</string>
    <string name="no_guesses_key">NO_GUESSES</string>
    <string name="highscores_top">Highscores</string>
    <string name="play">Play</string>
    <string name="hangman_title">Hangman</string>
    <string name="highscores_word">Word</string>
    <string name="Incorrect"/>
    <string name="highscores_incorrect">Incorrect</string>
    <string name="highscores_score">Score</string>
    <string name="evil_key">SETTINGS_EVIL</string>
    <string name="evil_text">Evil</string>
</resources>
