<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hangman"
        android:id="@+id/hangman_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="38dp"
        android:textStyle="bold"
        android:textIsSelectable="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/play_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:id="@+id/high_scores_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_highscores"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:id="@+id/settings_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>