<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/highscores_list">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscores_top"
            android:id="@+id/highscores_top"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="26dp"
            android:layout_margin="10dp" />

        <TableLayout android:id="@+id/highscores_table"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow >
               <TextView
                   android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:layout_margin="4dip"
                    android:layout_weight="1.3"
                    android:text="@string/highscores_word"
                   android:textStyle="bold"
                   android:textSize="20dp" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:layout_margin="4dip"
                    android:layout_weight="1"
                    android:text="@string/highscores_incorrect"
                    android:textStyle="bold"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:layout_margin="4dip"
                    android:layout_weight="1"
                    android:text="@string/highscores_score"
                    android:textStyle="bold"
                    android:textSize="20dp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>